@@ -167,11 +167,11 @@
     (cond ((eq nethack-buffer-type 'nhw-status)
 	   (if (= nethack-status-line-number 0)
 	       (setcar nethack-status-lines str)
-	     (setcdr nethack-status-lines str))
+	     (setcdr nethack-status-lines str)
 	   (set-buffer (nethack-buffer winid))
 	   (erase-buffer)
 	   (nethack-parse-status-lines (car nethack-status-lines) (cdr nethack-status-lines))
-	   (insert (nethack-format-status nethack-status-string)))
+	   (insert (nethack-format-status nethack-status-string))))
 	  ((eq nethack-buffer-type 'nhw-message)
 	   (goto-char (point-max))
 	   (insert "\n" (propertize str 'face 'bold))
