@@ -1,5 +1,10 @@
 2001-10-19  shawn  <sabetts@vcn.bc.ca>
 
+	* nethack.el (nethack-parse-status-lines): regexp truncated.
+
+	* nethack-api.el (nethack-api-putstr): only print the status when
+	both status lines have been received.
+
 	* nethack.el (nethack-status-alist): new defvar
 	(nethack-status-string): likewise
 	(nethack-parse-status-lines): new function
